Correct font size and letter-spacing in styles.css
Fix font size typo and correct letter-spacing property.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,7 +9,7 @@ html {
  body {
 	font-family: Book Antiqua;
 	color: goldenrod;
-	font-size: 14px;
+	font-size: 16x;
 	lettter-spacing: 10px;
 	margin: 0;
     padding: 50px 20px;
